# TH3_jelle_bosscher

./: .gitignore  README.md  pyproject.toml
src/: algorithm.py  app.py  bond.py  brick.py  config.py  course.py  course_count_experiment.py  wall.py
src/algos/: __init__.py  brick_by_brick.py  limited_course_stride.py
src/bonds/: __init__.py  flemish.py  strecher.py  wild.py
tests/: test_algorithms.py  test_bonds.py  test_course.py
